--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,15 @@ repositories {
     }
 }
 
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support:design:26.0.1'
     compile 'com.android.support:palette-v7:26.0.1'
     compile 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
-    compile 'com.github.amlcurran.showcaseview:library:5.4.3'
+    compile 'com.github.amlcurran.showcaseview:library:5.4.+'
     compile 'com.droidninja:filepicker:2.0.+'
-    compile 'com.github.bumptech.glide:glide:4.1.1'
+    compile 'com.github.bumptech.glide:glide:4.1.+'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
 }
