--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.1"
     defaultConfig {
         applicationId 'com.mrgames13.jimdo.colorconverter'
         minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 107
-        versionName "1.0.7"
+        targetSdkVersion 27
+        versionCode 108
+        versionName "1.0.8"
+        renderscriptTargetApi 27
+        renderscriptSupportModeEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -28,13 +31,13 @@ repositories {
 
 
 dependencies {
-    //compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:26.0.1'
-    compile 'com.android.support:design:26.0.1'
-    compile 'com.android.support:palette-v7:26.0.1'
-    compile 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
-    compile 'com.github.amlcurran.showcaseview:library:5.4.+'
-    compile 'com.droidninja:filepicker:2.0.+'
-    compile 'com.github.bumptech.glide:glide:4.1.+'
+    //implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:27.+'
+    implementation 'com.android.support:design:27.+'
+    implementation 'com.android.support:palette-v7:27.+'
+    implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
+    implementation 'com.github.amlcurran.showcaseview:library:5.4.+'
+    implementation 'com.droidninja:filepicker:2.0.8'
+    implementation 'com.github.bumptech.glide:glide:4.1.+'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
 }
