--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,23 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    packagingOptions {
+        exclude 'lib/x86/libRSSupport.so'
+        exclude 'lib/x86/librsjni.so'
+        exclude 'lib/x86_64/libRSSupport.so'
+        exclude 'lib/x86_64/librsjni.so'
+        exclude 'lib/arm64-v8a/libRSSupport.so'
+        exclude 'lib/arm64-v8a/librsjni.so'
+        exclude 'lib/mips/libRSSupport.so'
+        exclude 'lib/mips/librsjni.so'
+        exclude 'lib/armeabi-v7a/libRSSupport.so'
+        exclude 'lib/armeabi-v7a/librsjni.so'
     }
 }
 
@@ -38,6 +55,6 @@ dependencies {
     implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.+'
     implementation 'com.droidninja:filepicker:2.0.8'
-    implementation 'com.github.bumptech.glide:glide:4.1.+'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
+    //implementation 'com.github.bumptech.glide:glide:4.1.+'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.1.+'
 }
