--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation 'com.android.support:palette-v7:27.+'
     implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
     implementation 'com.github.amlcurran.showcaseview:library:5.4.+'
-    implementation 'com.droidninja:filepicker:2.0.8'
+    implementation 'com.droidninja:filepicker:2.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.3.+'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.+'
 }
