--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.mrgames13.jimdo.colorconverter'
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 110
-        versionName "1.1.0"
+        versionCode 112
+        versionName "1.1.2"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -35,12 +35,11 @@ repositories {
 
 dependencies {
     //implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.+'
-    implementation 'com.android.support:design:27.+'
-    implementation 'com.android.support:palette-v7:27.+'
-    implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
-    implementation 'com.github.amlcurran.showcaseview:library:5.4.+'
-    implementation 'com.droidninja:filepicker:2.1.1'
-    implementation 'com.github.bumptech.glide:glide:4.3.+'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.+'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:palette-v7:27.1.0'
+    implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.0'
+    implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.droidninja:filepicker:2.1.4' // 2.1.1
 }
