--- a/instantapp/src/main/AndroidManifest.xml
+++ b/instantapp/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest package="com.mrgames13.jimdo.colorconverter.instantapp"
-    android:installLocation="auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+<manifest package="com.mrgames13.jimdo.colorconverter.instantapp"/>
