--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId 'com.mrgames13.jimdo.colorconverter'
-        minSdkVersion 15
+        applicationId "com.mrgames13.jimdo.colorconverter"
+        minSdkVersion 16
         targetSdkVersion 27
-        versionCode 110
-        versionName "1.1.0"
+        versionCode 117
+        versionName "1.1.7"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -17,30 +16,9 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        debug {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
-
-repositories {
-    mavenCentral()
-    maven {
-        url 'https://maven.google.com'
-    }
-}
-
 
 dependencies {
-    //implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.+'
-    implementation 'com.android.support:design:27.+'
-    implementation 'com.android.support:palette-v7:27.+'
-    implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.+'
-    implementation 'com.github.amlcurran.showcaseview:library:5.4.+'
-    implementation 'com.droidninja:filepicker:2.1.1'
-    implementation 'com.github.bumptech.glide:glide:4.3.+'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.+'
+    implementation project(':base-feature')
 }
