--- a/base-feature/src/main/AndroidManifest.xml
+++ b/base-feature/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:windowSoftInputMode="adjustPan" />
         <!-- FileProvider -->
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.mrgames13.jimdo.colorconverter.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
