--- a/image/build.gradle
+++ b/image/build.gradle
@@ -9,10 +9,15 @@ android {
         targetSdkVersion 29
         versionCode 200
         versionName "2.0.0"
-
+        vectorDrawables.useSupportLibrary = true
     }
 }
 
 dependencies {
     implementation project(':app')
+    implementation "androidx.core:core-ktx:1.2.0-rc01"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
 }
