--- a/image/src/main/AndroidManifest.xml
+++ b/image/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <application>
+    <application
+        android:allowBackup="true">
         <activity android:name=".ui.ImageActivity"/>
     </application>
 </manifest>
