--- a/image/build.gradle
+++ b/image/build.gradle
@@ -20,4 +20,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.asksira.android:bsimagepicker:1.2.2'
 }
