--- a/image/build.gradle
+++ b/image/build.gradle
@@ -11,15 +11,24 @@ android {
         versionName "2.0.0"
         vectorDrawables.useSupportLibrary = true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
     implementation project(':app')
     implementation "androidx.core:core-ktx:1.2.0-rc01"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.asksira.android:bsimagepicker:1.2.2'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation  'com.fxn769:pix:1.4.4'
+    implementation "com.github.skydoves:colorpickerview:2.1.5"
 }
