--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+#
+# Copyright © 2019 Marc Auberer. All rights reserved.
+#
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
