--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,7 @@
+#
+# Copyright © 2019 Marc Auberer. All rights reserved.
+#
+
 #Sat Nov 23 23:38:56 CET 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
