--- a/image/build.gradle
+++ b/image/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 200
-        versionName "2.0.0"
+        versionCode 190
+        versionName "2.0.0-alpha01"
         vectorDrawables.useSupportLibrary = true
     }
     compileOptions {
@@ -26,13 +26,13 @@ android {
 
 dependencies {
     implementation project(':app')
-    implementation "androidx.core:core-ktx:1.2.0-rc01"
+    implementation 'androidx.core:core-ktx:1.2.0-rc01'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
-    implementation  'com.fxn769:pix:1.4.4'
-    implementation "com.github.skydoves:colorpickerview:2.1.5"
+    implementation 'com.fxn769:pix:1.4.4'
+    implementation 'com.github.skydoves:colorpickerview:2.1.5'
 }
