--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.mrgames13.jimdo.colorconverter"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 192
-        versionName "2.0.0-alpha03"
+        versionCode 200
+        versionName "2.0.0"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
