--- a/image/build.gradle
+++ b/image/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 192
-        versionName "2.0.0-alpha03"
+        versionCode 200
+        versionName "2.0.0"
         vectorDrawables.useSupportLibrary = true
     }
     compileOptions {
