--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 #
-# Copyright © 2019 Marc Auberer. All rights reserved.
+# Copyright © Marc Auberer 2020. All rights reserved
 #
 
 #Sat Nov 23 23:38:56 CET 2019
