--- a/local.properties
+++ b/local.properties
@@ -1,8 +1,12 @@
+#
+# Copyright © Marc Auberer 2020. All rights reserved
+#
+
 ## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 13 14:30:36 CET 2019
-sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
+#Mon Jan 06 13:46:24 CET 2020
+sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
