--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright © 2019 Marc Auberer. All rights reserved.
+ * Copyright © Marc Auberer 2020. All rights reserved
  */
 
 apply plugin: 'com.android.application'
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.mrgames13.jimdo.colorconverter"
+        applicationId "com.chillibits.colorconverter"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 203
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.github.skydoves:colorpickerview:2.1.5'
 
     // dependencies for testing
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
