--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 13 14:30:36 CET 2019
-sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
+#Wed Jan 22 17:04:58 CET 2020
+sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
