--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.chillibits.colorconverter"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 203
-        versionName "2.0.3"
+        versionCode 207
+        versionName "2.0.7"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -52,7 +52,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
+    api 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61'
 }
 
 // Task for downloading all translation files
