--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,11 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.chillibits.colorconverter"
+        applicationId "com.mrgames13.jimdo.colorconverter"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 207
-        versionName "2.0.7"
+        versionCode 208
+        versionName "2.1.0-beta01"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
