Fix window insets

--- a/local.properties
+++ b/local.properties
@@ -1,12 +1,8 @@
-#
-# Copyright © Marc Auberer 2020. All rights reserved
-#
-
 ## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 06 13:46:24 CET 2020
-sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
+#Fri Jan 31 12:58:51 CET 2020
+sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
