Optimize dark mode & update dependencies

--- a/local.properties
+++ b/local.properties
@@ -1,8 +1,12 @@
+#
+# Copyright © Marc Auberer 2020. All rights reserved
+#
+
 ## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 31 12:58:51 CET 2020
-sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
+#Mon Feb 10 11:18:23 CET 2020
+sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
