Prepare for release of version 2.1.1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mrgames13.jimdo.colorconverter"
+    tools:ignore="LockedOrientationActivity"
     android:installLocation="auto">
 
     <dist:module dist:instant="true" />
