--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: android
 dist: trusty
 android:
@@ -9,3 +10,8 @@ android:
     - extra-android-m2repository
 before_install:
   - chmod +x gradlew
+before_script:
+  - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
