--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.mrgames13.jimdo.colorconverter"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 211
-        versionName "2.1.1"
+        versionCode 212
+        versionName "2.1.2"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -47,6 +47,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.fxn769:pix:1.4.4'
     implementation 'com.github.skydoves:colorpickerview:2.1.6'
+    implementation 'com.mikepenz:iconics-core:5.0.1'
+    implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.6-kotlin@aar'
+    implementation 'com.mikepenz:fastadapter:5.0.0'
+    implementation 'com.github.javiersantos:MaterialStyledDialogs:2.1'
 
     // dependencies for testing
     testImplementation 'junit:junit:4.13'
