--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,25 @@ dist: trusty
 android:
   components:
     - build-tools-29.0.3
-    - android-29
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+    - android-$ANDROID_EMULATOR_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_EMULATOR_LEVEL
+env:
+  global:
+    - ANDROID_API_LEVEL=27
+    - ANDROID_EMULATOR_LEVEL=21
+    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - ADB_INSTALL_TIMEOUT=20
 before_install:
   - chmod +x gradlew
+licenses:
+  - '.+'
+before_script:
+  - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+  - emulator -avd test -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
