--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 26 16:37:25 CEST 2020
-sdk.dir=C\:\\Users\\i516467\\AppData\\Local\\Android\\Sdk
+#Mon Jul 06 13:06:40 CEST 2020
+sdk.dir=C\:\\Users\\Marc\\AppData\\Local\\AndroidSDK
