--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+    packagingOptions {
+        pickFirst 'META-INF/*'
+    }
 }
 
 dependencies {
@@ -48,6 +51,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     // External dependencies
     implementation 'net.margaritov.preference.colorpicker.ColorPickerPreference:ColorPickerPreference:1.0.0'
@@ -58,6 +62,7 @@ dependencies {
     implementation 'com.github.javiersantos:MaterialStyledDialogs:3.0.2'
 
     // ChilliBits dependencies
+    implementation 'com.chillibits:simplesettings:1.1.0'
     implementation 'com.chillibits:adobecolortool:1.0.0'
 
     // Room dependencies
