--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url "https://repo.chillibits.com/artifactory/android" }
     }
 }
 
